# git-scanner

./: Cargo.toml  README.md
src/: file_walker.rs  git.rs  git_logger.rs  indicator_calculator.rs  lib.rs
